# fcs

./: .dockerignore  .gitignore  Dockerfile  EXTENSION_README.md  FCS_Agent_Flow_Transition_Design.md  FCS_SYSTEM_DOCUMENTATION.md  MEMORY_REASONING_NODES_SUMMARY.md  PERFORMANCE_ANALYSIS_AND_FIXES.md  README.md  REASONING_NODES_SUMMARY.md  REMAINING_DEVELOPMENT_TASKS.md  anotherprojectsample.txt  article.md  check_document_status.py  docker-compose.yml  example.env  example_usage.py  llamapincone.txt  main.py  memduo.db  pyproject.toml  pyprojectt.toml  pytest.ini  redis_requirements.txt  run_migration.py  setup_db.py  start.sh  structured.txt  test.py  test_document_upload.py  test_fixes_demo.py  test_mineru.py  test_mineru_integration.py  test_neo4j_connection.py  test_upload_endpoint.py
.vercel/: project.json
alembic/: env.py
api/: __init__.py  auth.py  auth_routes.py  chat.py  documents.py  files.py  graph_rag.py  lang_chain_graph_rag.py  memory.py  multimodal_rag.py  rag.py  relik_graph_rag.py
app/: main.py
core/: config.py  logging.py
db/: crud.py  migrations.py  models.py  session.py
docs/: FCS Saliency Final.md  FCS_Confidence_Final.md  FCS_INTEGRATION.md  REASONING_NODES_FEATURE.md  SALIENCE_LOGGING_DEMO.md  SALIENCE_SYSTEM_GUIDE.md
extractor/: __init__.py  relik_extractor.py
fcs_core/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  async_worker.py  cognitive_objects.py  contradiction_detector.py  example.py  fcs.py  fcs_memory_service.py  models.py  run_tests.py
frontend/: .env.production  Dockerfile  capacitor.config.ts  ionic.config.json  nginx.conf  package-lock.json  package.json
graphiti_extend/: DEFAULT_VALUES_FEATURE.md  FCS_INTEGRATION.md  README.md  SALIENCE_SYSTEM_GUIDE.md  __init__.py  (+17 more)
(+248 files in other folders)
